--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,26 @@ body {
     height: 100vh;
 }
 
+.navbar {
+    z-index: 1;
+}
+
 .sect-container {
     width: 100%;
     height: 100%;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    outline: auto;
+}
+
+section p {
+    font-size: 1.5rem;
 }
