--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-    --typewriterSpeed: 4s;
+    --typewriterSpeed: 6s;
     --typewriterCharacters: 31;
 }
 
@@ -32,19 +32,7 @@ body {
     text-align: center;
     width: 100%;
     height: 100vh;
-    background: grey;
-}
-
-.about-section {
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
-    background: #003566;
+    background: darkgrey;
 }
 
 .skills-section {
@@ -54,16 +42,14 @@ body {
     justify-content: center;
     text-align: center;
     width: 100%;
-    height: 50vh;
+    height: 40vh;
 }
 
 .skill-container {
     height: 600px;
     width: 60%;
-    margin-top: -80px;
+    margin-top: -90px;
     background: white;
-    border-radius: 10px;
-    border: darkgrey solid 1px;
 }
 
 #home h1 {
@@ -82,7 +68,7 @@ body {
 }
 
 #home h1::before {
-    background:white;
+    background:darkgrey;
     animation: 
         typewriter var(--typewriterSpeed) steps(var(--typewriterCharacters)) 1s forwards;
 }
@@ -110,7 +96,7 @@ body {
 }
 
 .about-img {
-    max-width: 250px;
+    max-width: 350px;
     border-radius: 50%;
     max-height: 100%;
 }
