--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,8 @@ body {
     background: #003566;
 }
 
+/* ----------------------SKILLS---------------------- */
+
 .skills-section {
     display: flex;
     flex-direction: column;
@@ -58,13 +60,110 @@ body {
 }
 
 .skill-container {
-    height: 600px;
-    width: 60%;
-    margin-top: -80px;
+    height: 100%;
+    width: 80%;
+    margin-top: -150px;
     background: white;
     border-radius: 10px;
     border: darkgrey solid 1px;
 }
+
+.skills-header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.skills-arrow,
+.skills-icon{
+    font-size: 2rem;
+
+}
+
+.skills-arrow{
+    margin-left: 10px;
+    transition: .4s;
+
+}
+
+.skills-icon {
+    margin-right: 10px;
+}
+
+.skills-titles {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.skills-list{
+    row-gap: 1.5rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+}
+
+.skills-name{
+    font-weight: 100;
+}
+
+.skills-bar,
+.skills-percentage{
+    height: 5px;
+    border-radius: .25rem;
+
+}
+
+.skills-bar{
+    
+    background: rgba(148, 185, 255, 0.808);
+}
+
+.skills-percentage{
+    background: #00488b;
+    display: block;
+}
+
+.skills-html {
+    width: 90%;
+}
+
+.skills-css {
+    width: 65%;
+}
+
+.skills-js {
+    width: 50%;
+}
+
+.skills-ruby{
+    width: 80%;
+}
+
+.skills-rails{
+    width: 75%;
+}
+
+.skills-sql {
+    width: 60%;
+}
+
+.skills-close .skills-list{
+    height: 0;
+    overflow: hidden;
+}
+
+.skills-open .skills-list {
+    height: max-content;
+    margin-bottom: 5px;
+}
+
+.skills-open .skills-arrow {
+    transform: rotate(-180deg)
+}
+
+/* ----------------------HOME PAGE EFFECTS---------------------- */
+
 
 #home h1 {
     font-family: 'Source Code Pro', monospace;
@@ -96,26 +195,26 @@ body {
     
 }
 
-
-
-#home p {
-    font-family: 'Source Code Pro', sans-serif;
-}
-
-.hello {
-    padding-bottom: 20px;
-}
-
-.welcome {
-    padding-bottom: 30px;
-}
-
 .subtitle {
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeInUp 2s ease 
     calc(var(--typewriterSpeed) + 1s) forwards
 }
+
+#home p {
+    font-family: 'Source Code Pro', sans-serif;
+}
+
+.hello {
+    padding-bottom: 30px;
+}
+
+.welcome {
+    padding-bottom: 30px;
+}
+
+
 
 .about-img {
     max-width: 250px;
