--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,14 @@
 :root {
     --typewriterSpeed: 4s;
     --typewriterCharacters: 31;
+
+    /* Colours */
+
+    --back-light: #f4f4f4;
+    --back-dark: #4f6d7a;
+    --main-colour: #f25c54;
+    --second-colour: #f27059;
+    --third-colour: #f4845f;
 }
 
 * {
@@ -14,15 +22,99 @@ body {
     line-height: 1.6;
     height: 100vh;
 }
+/* NAVBAR */
 
-.navbar {
-    z-index: 1;
+.grid {
+    display: grid;
+    gap: 1.5rem;
 }
 
-/* .sect-container {
+.contain{
+    max-width: 768px;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.header {
     width: 100%;
-    height: 100%;
-} */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    background-color: var(--back-light);
+}
+
+.nav_main {
+    max-width: 968px;
+    height: 3.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_logo {
+    text-decoration: none;
+    color: black;
+}
+
+
+.nav_toggle {
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 767px){
+    .nav_menu {
+        position: fixed;
+        bottom: -100%;
+        left: 0;
+        width: 100%;
+        background-color: var(--back-light);
+        padding: 2rem 1.5rem 4rem;
+        box-shadow: 0 -1 4px rgba(0, 0, 0, 0.15);
+        border-radius: 1.5rem 1.5rem 0 0;
+        transition: .3s;
+    }
+}
+
+.nav_list {
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+}
+
+.nav_link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+    margin-bottom: 0;
+}
+
+
+
+.nav_icon{
+    font-size: 1.5rem;
+}
+
+.nav_close {
+    position: absolute;
+    right: 1.3rem;
+    bottom: .5rem;
+    font-size: 1.5rem;
+    cursor: pointer
+}
+
+/* SHOW MENU */
+
+.show-menu {
+    bottom: 0;
+}
+
+/* ---------------------------------- */
 
 .main-section {
     display: flex;
@@ -32,7 +124,7 @@ body {
     text-align: center;
     width: 100%;
     height: 100vh;
-    background: white;
+    background: var(--back-light);
 }
 
 .about-section {
@@ -44,7 +136,7 @@ body {
     text-align: center;
     width: 100%;
     height: 100vh;
-    background: #003566;
+    background: var(--main-colour);
 }
 
 /* ----------------------SKILLS---------------------- */
@@ -245,5 +337,44 @@ body {
     to {
         opacity: 1;
         transform: translateY(0);
+    }
+}
+
+
+/* MEDIA QUERIES  */
+
+@media screen and (min-width: 768px) {
+    .header {
+        top: 0;
+        bottom: initial;
+        padding: 0 1rem;
+    }
+
+    .contain {
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .nav_main{
+        height: 5rem;
+        column-gap: 1rem;
+    }
+
+    .nav_icon,
+    .nav_close,
+    .nav_toggle{
+        display: none;
+    }
+
+    .nav_list{
+        display: flex;
+        column-gap: 2rem;
+    }
+
+    .nav_menu {
+        margin-left: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
