--- a/src/css/style.css
+++ b/src/css/style.css
@@ -168,6 +168,37 @@ ul {
     bottom: 0;
 }
 
+/* ------------ HOME ---------------- */
+.home_container {
+    gap: 1rem ;
+}
+
+.home_content {
+    grid-template-columns: 25px 300px;
+    padding-top: 3.5rem;
+    align-items: center;
+}
+
+.home_social {
+    display: grid;
+    grid-template-columns: max-content;
+    row-gap: 1rem;
+}
+
+.home_data {
+    padding-top: 20px;
+}
+
+.home_social_icon {
+    font-size: 1.25rem;
+}
+
+.home_image {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 /* ---------------------------------- */
 
 .main-section {
@@ -182,6 +213,7 @@ ul {
 }
 
 .footer-section {
+    margin-top: 230px;
     margin-bottom: 50px;
 }
 
@@ -190,8 +222,6 @@ ul {
     height: 130vh;
     background: var(--back-light);
 }
-
-
 
 .about-section {
     color: white;
@@ -390,8 +420,6 @@ ul {
 }
 
 
-
-
 /* ----------------------HOME PAGE EFFECTS---------------------- */
 
 
@@ -506,6 +534,63 @@ ul {
     outline: none;
     padding: .25rem .5rem .5rem 0;
 
+}
+
+/* ---------------- Footer --------------- */
+
+.footer {
+    padding-top: 2rem;
+}
+
+.footer_container{
+    row-gap: 2.5rem;
+}
+
+.footer_bg{
+    background-color: var(--main-colour);
+    padding: 2rem 0 3rem;
+}
+
+.footer_title{
+    font-size: var(--h1-font-size);
+}
+
+.footer_subtitle {
+    font-size: var(--small-font-size);
+}
+
+.footer_links {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+}
+
+.footer_link {
+    text-decoration: none;
+}
+
+.footer_link:hover {
+    color: var(--back-light);
+}
+
+.footer_social {
+    font-size: 1.25rem;
+    margin-right: var(--mb-1-5);
+}
+
+.footer_social:hover {
+    color: var(--back-light);
+}
+
+.footer_title,
+.footer_subtitle,
+.footer_link,
+.footer_social {
+    color: var(--back-light);
+}
+
+a:link {
+    text-decoration: none;
 }
 
 /* ---------------- KEYFRAMES -------------- */
