--- a/src/css/style.css
+++ b/src/css/style.css
@@ -322,56 +322,42 @@ ul {
     margin-bottom: 5px;
 }
 
+.skills-grid-container {
+    
+}
+
+
+
 .skills-list{
-    row-gap: 1.5rem;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .skills-name{
     font-weight: 100;
 }
 
-.skills-bar,
-.skills-percentage{
-    height: 5px;
-    border-radius: .25rem;
 
+.js-logo {
+    width: 50px;
+    height: 64px;
 }
 
-.skills-bar{
-    
-    background: rgba(148, 185, 255, 0.808);
+.ruby-logo {
+    width: 64px;
+    height: 64px;
 }
 
-.skills-percentage{
-    background: #00488b;
-    display: block;
+.rails-logo {
+    width: 64px;
+    height: 64px;
 }
 
-.skills-html {
-    width: 90%;
+.sql-logo {
+    width: 64px;
+    height: 64px;
 }
 
-.skills-css {
-    width: 65%;
-}
-
-.skills-js {
-    width: 50%;
-}
-
-.skills-ruby{
-    width: 80%;
-}
-
-.skills-rails{
-    width: 75%;
-}
-
-.skills-sql {
-    width: 60%;
-}
 
 .skills-close .skills-list{
     height: 0;
