--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,9 +232,16 @@ ul {
     color: white;
     text-align: center;
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     background: var(--main-colour);
 }
+
+.about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 .about-image {
     max-width: 400px;
@@ -280,7 +287,7 @@ ul {
     justify-content: center;
     text-align: center;
     width: 100%;
-    height: 70vh;
+    height: 100%;
 }
 
 .skill-container {
@@ -312,10 +319,6 @@ ul {
 
 }
 
-.skills-icon {
-    margin-right: 10px;
-}
-
 .skills-titles {
     display: flex;
     justify-content: space-between;
@@ -325,8 +328,6 @@ ul {
 .skills-grid-container {
     
 }
-
-
 
 .skills-list{
     display: flex;
@@ -605,6 +606,17 @@ a:link {
 
 
 /* ---------------- MEDIA QUERIES --------------  */
+
+@media screen and (min-width: 575px) {
+    .about-section {
+        height: 100vh;
+    }
+
+    .about-content {
+        margin-top: -120px;
+    }
+}
+
 
 @media screen and (min-width: 767px) {
     .header {
